Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICSDBNET.CS


        private static class BTICSDB_32
        {
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChClear(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChConfig@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChConfig(UInt32 configval, UInt16 bitrateflag, UInt16 bytesperblock, UInt16 framespersecond, UInt16 blocksperframe, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChGetCount@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ChGetCount(ref Int32 rcvcount, ref Int32 xmtcount, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChGetInfo@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ChGetInfo(UInt16 infotype, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChIsCSDB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChIsCSDB(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChIsRcv@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChIsRcv(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChIsXmt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChIsXmt(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChPause@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ChPause(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChPauseCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChPauseCheck(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChResume@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ChResume(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChStart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChStart(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChStop@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChStop(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_FilterClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_FilterClear(UInt32 basevaladdr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_FilterDefault@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_FilterDefault(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_FilterRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_FilterRd(Int32 addrval, Int32 sival, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_FilterSet@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_FilterSet(UInt32 configval, Int32 addrval, Int32 simask, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_FilterWr@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_FilterWr(UInt32 msgaddr, Int32 addrval, Int32 sival, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListDataRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListDataRd(byte[] buf, Int32 count, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListDataWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListDataWr(byte[] buf, Int32 count, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListRcvCreate@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListRcvCreate(UInt32 listconfigval, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListStatus(UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListXmtCreate@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListXmtCreate(UInt32 listconfigval, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgBlockRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgBlockRd(ref MSGFIELDSCSDB msgfields, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgBlockWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgBlockWr(ref MSGFIELDSCSDB msgfields, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgCreate@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgCreate(UInt32 configval, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgDataByteRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern byte BTICSDB_MsgDataByteRd(Int32 index, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgDataByteWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_MsgDataByteWr(byte data, Int32 index, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgDataRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_MsgDataRd(byte[] buf, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgDataWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_MsgDataWr(byte[] buf, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgIsAccessed@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_MsgIsAccessed(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgValidSet@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_MsgValidSet(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ParamAmplitudeConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ParamAmplitudeConfig(UInt32 configval, UInt16 dacval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ParamAmplitudeGet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ParamAmplitudeGet(ref UInt16 dacval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedBranch@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedBranch(UInt32 condition, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedBuild@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedBuild(Int32 nummsgs, UInt32[] msgs, Int32[] freq, Int32 interblockgap, Int32 rsvdblocks, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedCall@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedCall(UInt32 condition, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedEntry@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedEntry(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedGap@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedGap(UInt16 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedHalt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedHalt(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedLog@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedLog(UInt32 condition, UInt16 tagval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedMsg(UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedPause@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedPause(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedPulse@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedPulse(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedRestart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedRestart(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedReturn@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedReturn(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ChConfigEx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChConfigEx(UInt32 configval, UInt16 bitrateflag, UInt16 bytesperblock, UInt16 framespersecond, UInt16 blocksperframe, UInt16 interbytegap, Int32 channum, IntPtr handleval);
